tests/baselines/reference/conditionalExpressionNewLine8.errors.txt
conditionalExpressionNewLine8.ts(1,9): error TS2304: Cannot find name 'a'.
conditionalExpressionNewLine8.ts(2,5): error TS2304: Cannot find name 'b'.
conditionalExpressionNewLine8.ts(2,9): error TS2304: Cannot find name 'd'.
conditionalExpressionNewLine8.ts(2,13): error TS2304: Cannot find name 'e'.
conditionalExpressionNewLine8.ts(3,5): error TS2304: Cannot find name 'c'.
conditionalExpressionNewLine8.ts(3,9): error TS2304: Cannot find name 'f'.
conditionalExpressionNewLine8.ts(3,13): error TS2304: Cannot find name 'g'.


==== conditionalExpressionNewLine8.ts (7 errors) ====
    var v = a 
            ~
!!! error TS2304: Cannot find name 'a'.
      ? b ? d : e
        ~
!!! error TS2304: Cannot find name 'b'.
            ~
!!! error TS2304: Cannot find name 'd'.
                ~
!!! error TS2304: Cannot find name 'e'.
      : c ? f : g;
        ~
!!! error TS2304: Cannot find name 'c'.
            ~
!!! error TS2304: Cannot find name 'f'.
                ~
!!! error TS2304: Cannot find name 'g'.